# component-microsoft-dynamics-wr

./: .gitignore  Dockerfile  README.md  change_log.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: push.yml
component_config/: component_long_description.md  component_short_description.md  configSchema.json  configuration_description.md  documentationUrl.md  licenseUrl.md  sourceCodeUrl.md
component_config/sample-config/: config.json
component_config/sample-config/in/tables/: contacts.csv  leads.csv
src/: component.py  configuration.py  main.py
src/dynamics/: client.py  component.py  result.py
tests/: test_component.py
